--- a/index.html
+++ b/index.html
@@ -1,74 +1,68 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<meta charset="UTF-8">
+	<title>A-Reum POD 갤러리</title>
+     <link rel="stylesheet" href="style.css"/>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<style type="text/css">
+		* {margin:0; padding:0}
+		ul, li {list-style:none;}
+		#wrapBox {position:relative;}
+		.imgBox {position:relative; margin:0 auto;}
+		.imgBox li {position:absolute;}
+		.dotBox {position:absolute; top:250px; left: 150px; margin:0 auto; width:60px; z-index:3;}
+		.dotBox li {float:top;}
+		.dotBox a {display:block; width:15px; height:15px; background:url("images/dots4.png") no-repeat; background-position:0 -1px;}
+		.dotBox li.active a {background-position:0 -33px}
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Areumpod.GitHub.io : ">
+    </style>
+</head>
+<body>
+        <div class="container">
+        <div class="layout-top">
+            <ul class="top">
+            <li class="top-image"><img src="https://s-media-cache-ak0.pinimg.com/originals/ee/b4/a3/eeb4a374cbfcb6b4f38053f2ea1c5086.jpg"></li>
+  <li class="top-font">Empty Myself <br>
+      To Be Filled. </li>
+            </ul>
+</div>
+        </div>
+        <div class="line-menu">
+        <p class="menu-p"> portfolio   poster    |    editorial    |    mobile    |    project planning </p>
+        </div>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Areumpod.GitHub.io</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/areumpod">View on GitHub</a>
-
-          <h1 id="project_title">Areumpod.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	<div id="wrapBox">
+		<ul class="imgBox">
+			<li class="act"><img src="https://s-media-cache-ak0.pinimg.com/originals/c3/3f/85/c33f8594401f23f6f91815a44ad83a09.jpg" alt="" />
+            </li>
+            <li><img src="https://s-media-cache-ak0.pinimg.com/originals/6d/75/c9/6d75c943affbbe041b7d651cb32996e7.jpg" alt="" /></li>
+			<li><img src="https://s-media-cache-ak0.pinimg.com/originals/1a/9a/a2/1a9aa20d77c32b8ec82922c478621144.jpg" alt="" /></li>
+			<li><img src="https://s-media-cache-ak0.pinimg.com/originals/57/08/10/5708108669c481f955beb31f77f358a3.jpg" alt="" /></li>
+		</ul>
+		<ul class="dotBox">
+			<li class="active"><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+		</ul>
+        <ul class="subtitle">
+        <li class="poster"><img src="https://s-media-cache-ak0.pinimg.com/originals/95/4d/ed/954dedb1b56101f0a600adc90cb85b16.jpg"/>
+             <li class="poster2"><img src="https://s-media-cache-ak0.pinimg.com/originals/22/68/63/2268631959ef34f83191e413837f3a40.jpg"/></li>
+        </ul>
+        
+	</div>
+	<script>
+		$(document).ready(function(){
+			$('.imgBox li').css({display:'none',opacity:0});
+			$('.imgBox li.act').css({display:'block',opacity:1});
+			$('.dotBox a').click(function(){
+				var imgNum=$('.dotBox a').index(this);
+				$(this).parent().addClass('active').siblings().removeClass();
+				$('.imgBox li.act').animate({opacity:0},1000,function(){$(this).css('display','none')}).removeClass('act');
+				$('.imgBox li').eq(imgNum).css('display','block').animate({opacity:1},1000).addClass('act');
+			});
+		})
+	</script>
+</body>
 </html>
