--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>A-Reum POD 갤러리</title>
+	<title>A-Reum POD</title>
      <link rel="stylesheet" href="style.css"/>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<style type="text/css">
