SVG Drawing Animation
http://tympanus.net/codrops/2013/12/30/svg-drawing-animation/

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A-Reum POD</title>
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />
+        <meta name="author" content="areumpod" />
         <link rel="stylesheet" href="/stylesheets/style.css"/>
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     </head>
@@ -10,11 +15,15 @@
         <div class="container">
             <section id="header">
                 <img src="https://s-media-cache-ak0.pinimg.com/originals/ee/b4/a3/eeb4a374cbfcb6b4f38053f2ea1c5086.jpg">
+                <svg width="320" height="120" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <path fill="#FFF" stroke="#000" stroke-width="12" stroke-miterlimit="10" fill-opacity="0" d="M0 0 H 320 V 120 H 0 L 0 0"/>
+                </svg>
                 <h1 class="top-font">Empty Myself<br>To Be Filled.</h1>
             </section>
             <nav>
                 <ul class="line-menu">
-                    <li>portfolio poster</li>
+                    <li>portfolio</li>
+                    <li>poster</li>
                     <li>editorial</li>
                     <li>mobile</li>
                     <li>project planning</li>
@@ -51,6 +60,8 @@
                 </div>
             </section>
         </div>
+        <script src="javascripts/classie.js"></script>
+        <script src="javascripts/svganimations.js"></script>
         <script src="javascripts/main.js"></script>
     </body>
 </html>
