--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A-Reum POD</title>
         <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta name="keywords" content="designer" />
         <meta name="author" content="areumpod" />
         <link rel="stylesheet" href="/stylesheets/style.css"/>
             <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
                 <svg width="320" height="120" version="1.1" xmlns="http://www.w3.org/2000/svg">
                     <path fill="#FFF" stroke="#000" stroke-width="12" stroke-miterlimit="10" fill-opacity="0" d="M0 0 H 320 V 120 H 0 L 0 0"/>
                 </svg>
-                <h1 class="top-font"><img src="http://blogfiles.naver.net/20150307_102/charming_pr_1425686357044raOyI_PNG/6.png"> </h1>
+                <h1 class="top-font"><img src="/images/re_image/6.png"> </h1>
             </section>
                         <nav class="first">
                 <ul class="line-menu">
@@ -32,9 +32,9 @@
             </nav>
             
                         <nav class="icon">
-                <ul class="icon-menu"><li><img src="http://postfiles8.naver.net/20150307_231/charming_pr_1425671169280e4D8v_PNG/icon2.png?type=w1"></li>
-                    <li><img src="http://postfiles6.naver.net/20150307_5/charming_pr_1425671169365N0abm_PNG/icon3.png?type=w1"></li>
-                    <li><img src="http://postfiles9.naver.net/20150307_56/charming_pr_1425671169488ldibF_PNG/icon4.png?type=w1"></li>
+                <ul class="icon-menu"><li><img src="/images/re_image/icon2.png"></li>
+                    <li><img src="/images/re_image/icon3.png"></li>
+                    <li><img src="/images/re_image/icon4.png"></li>
 
                 </ul>
                 
@@ -44,16 +44,16 @@
             <section id="wrapBox">
                 <ul class="imgBox">
                     <li class="act">
-                        <img src="http://blogfiles.naver.net/20150307_271/charming_pr_1425683199082KXrUo_GIF/gravity_drib3.gif" alt="" />
+                        <img src="/images/re_image/gravity_drib3.gif" alt="" />
                     </li>
                     <li>
-                        <img src="http://blogfiles.naver.net/20150307_22/charming_pr_1425685208379pm4mt_JPEG/5.jpg" alt="" />
+                        <img src="/images/re_image/5.jpg" alt="" />
                     </li>
                     <li>
-                        <img src="http://blogfiles.naver.net/20150307_221/charming_pr_1425683755479Cz3jC_JPEG/gravity_drib2-1.jpg" alt="" />
+                        <img src="/images/re_image/gravity_drib2-1.jpg" alt="" />
                     </li>
                     <li>
-                        <img src="http://blogfiles.naver.net/20150307_292/charming_pr_1425683755629jTh0B_JPEG/gravity_drib3-1.jpg" alt="" />
+                        <img src="/images/re_image/gravity_drib3-1.jpg" alt="" />
                     </li>
                 </ul>
                 <ul class="dotBox">
